--- a/common/app/views/fragments/amp/stylesheets/hosted.scala.html
+++ b/common/app/views/fragments/amp/stylesheets/hosted.scala.html
@@ -339,6 +339,25 @@
     padding: 12px 20px 0;
 }
 
+.hosted__meta {
+    position: relative;
+    width: auto;
+    padding: 12px 20px 0;
+    bottom: auto;
+    left: auto;
+    right: auto;
+}
+
+.hosted__container--content {
+    display: flex;
+    flex-direction: column;
+}
+
+.hosted__container--content .host__header {
+    padding-top: 0;
+    padding-bottom: 0;
+}
+
 .hosted__social.host__header {
     padding: 12px 20px 0;
     margin-top: 10px;
@@ -556,6 +575,10 @@
     height: 100%;
     z-index: 2;
     background: linear-gradient(to top, rgba(51, 51, 51, .4) 0%, rgba(51, 51, 51, .4) 2%, transparent 100%);
+}
+
+.hosted__video {
+    margin-top: -6px;
 }
 
 .content__article-body {
