--- a/admin/app/views/afg.scala.html
+++ b/admin/app/views/afg.scala.html
@@ -2,7 +2,7 @@
 
 @admin_main("Dashboard", env, isAuthed = true, hasCharts = true) {
 
-    <h1 class="page-header">Assets frequency graph</h1>
+    <h1 class="page-header"><i>In memoriam</i> Assets frequency graph</h1>
 
     <div style="width: 100%">
         @Html(body)
