--- a/common/app/views/fragments/amp/stylesheets/hosted.scala.html
+++ b/common/app/views/fragments/amp/stylesheets/hosted.scala.html
@@ -577,8 +577,8 @@
     background: linear-gradient(to top, rgba(51, 51, 51, .4) 0%, rgba(51, 51, 51, .4) 2%, transparent 100%);
 }
 
-.hosted__video {
-    margin-top: -6px;
+.hosted__video video {
+    width: 100%;
 }
 
 .content__article-body {
