--- a/common/app/views/fragments/email/stylesheets/main.scala.html
+++ b/common/app/views/fragments/email/stylesheets/main.scala.html
@@ -128,6 +128,10 @@
         margin-right: 4px;
     }
 
+    .inline-camera {
+        fill: #fb0;
+    }
+
     .text--brand {
         color: #005689;
     }
