use parameter passed by parent template

--- a/applications/app/views/media.scala.html
+++ b/applications/app/views/media.scala.html
@@ -2,6 +2,6 @@
 
 @main(page){ }{
 
-    @fragments.mediaBody(page, displayCaption = true)
+    @fragments.mediaBody(page, displayCaption = false)
 
 }
