--- a/applications/app/views/fragments/mediaBody.scala.html
+++ b/applications/app/views/fragments/mediaBody.scala.html
@@ -89,7 +89,7 @@
                                                 <meta itemprop="thumbnail" content="@Html(video.content.signedArticleImage)" />
                                                 <meta itemprop="thumbnailUrl" content="@Html(video.content.signedArticleImage)" />
 
-                                              @fragments.atoms.media(mediaAtom, displayCaption = false)
+                                              @fragments.atoms.media(mediaAtom, displayCaption = displayCaption)
                                             }
 
                                             @video.elements.mainVideo.map { videoElement =>
