--- a/commercial/app/views/liveevents/liveEvent.scala.html
+++ b/commercial/app/views/liveevents/liveEvent.scala.html
@@ -23,8 +23,10 @@
                 <div class="advert__meta">
                     @event.date.toString("dd MMM yyyy"), @event.venue.description
                 </div>
-                @if(event.ratioTicketsLeft <= 0.1){
-                    <div class="advert__meta advert__meta--scarcity">Last few tickets remaining</div>
+                @for(ratioTicketsLeft <- event.ratioTicketsLeft) {
+                    @if(ratioTicketsLeft <= 0.1) {
+                        <div class="advert__meta advert__meta--scarcity">Last few tickets remaining</div>
+                    }
                 }
                 <div class="advert__standfirst">
                     <strong>@event.displayPriceRange</strong>
