--- a/commercial/app/views/masterclasses/masterclassCard.scala.html
+++ b/commercial/app/views/masterclasses/masterclassCard.scala.html
@@ -15,7 +15,8 @@
         }
     }
     <div class="advert__meta">
-        <strong>@event.readableDate</strong> &#20; <span class="commercial--tone__highlight">@event.displayPriceRange</span><br/>
+        <strong>@event.readableDate</strong>
+        @for(displayPriceRange <- event.displayPriceRange){&#20; <span class="commercial--tone__highlight">@displayPriceRange</span><br/> }
         @event.venue.description
         @for(ratioTicketsLeft <- event.ratioTicketsLeft) {
             @if(ratioTicketsLeft <= 0.1) {
