--- a/commercial/app/views/masterclasses/masterclassLargeCard.scala.html
+++ b/commercial/app/views/masterclasses/masterclassLargeCard.scala.html
@@ -18,7 +18,8 @@
     <div class="advert__text">
         <h2 class="advert__title">@event.name</h2>
         <div class="advert__meta">
-            <strong>@event.readableDate</strong> &#20; <span class="commercial--tone__highlight">@event.displayPriceRange</span></span><br/>
+            <strong>@event.readableDate</strong>
+            @for(displayPriceRange <- event.displayPriceRange){&#20; <span class="commercial--tone__highlight">@displayPriceRange</span><br/> }
             @event.venue.description
             @for(ratioTicketsLeft <- event.ratioTicketsLeft) {
                 @if(ratioTicketsLeft <= 0.1) {
