--- a/static/src/stylesheets/module/_save-for-later.scss
+++ b/static/src/stylesheets/module/_save-for-later.scss
@@ -25,7 +25,8 @@ $sfl-button-height: 30px;
 }
 
 .save-for-later__button--saved,
-.save-for-later__button--save:hover {
+.save-for-later__button--save:hover,
+.save-for-later__button--save:focus {
     .inline-icon {
         fill: #ffffff;
         background-color: $news-main-1;
@@ -34,7 +35,8 @@ $sfl-button-height: 30px;
 
 .social--expanded-top {
     .save-for-later__button--saved,
-    .save-for-later__button--save:hover {
+    .save-for-later__button--save:hover,
+    .save-for-later__button--save:focus {
         .inline-icon {
             fill: $neutral-5;
         }
@@ -53,7 +55,8 @@ $sfl-button-height: 30px;
     }
 
     .save-for-later__button--saved,
-    .save-for-later__button--save:hover {
+    .save-for-later__button--save:hover,
+    .save-for-later__button--save:focus {
         .inline-icon {
             fill: $multimedia-support-5;
             border-color: $neutral-4;
@@ -63,7 +66,8 @@ $sfl-button-height: 30px;
 
     .social--expanded-top {
         .save-for-later__button--saved,
-        .save-for-later__button--save:hover {
+        .save-for-later__button--save:hover,
+        .save-for-later__button--save:focus {
             .inline-icon {
                 fill: $neutral-1;
             }
