Print the actual price range rather than the words...

--- a/commercial/app/views/liveevents/liveEvent.scala.html
+++ b/commercial/app/views/liveevents/liveEvent.scala.html
@@ -30,7 +30,7 @@
                 }
                 @for(displayPriceRange <- event.displayPriceRange) {
                     <div class="advert__standfirst">
-                        <strong>displayPriceRange</strong>
+                        <strong>@displayPriceRange</strong>
                     </div>
                     <span class="advert__more button button--small button--primary">
                         Book now @fragments.inlineSvg("arrow-right", "icon", List("i-right"))
