twitter icon no longer going to the next line

--- a/static/src/stylesheets/layout/_ab-new-header-test-variant.scss
+++ b/static/src/stylesheets/layout/_ab-new-header-test-variant.scss
@@ -1002,8 +1002,7 @@ $caption-button-size: 32px;
             flex-wrap: wrap;
             border-bottom: 0;
 
-            & > div,
-            & > p {
+            .meta__extras {
                 flex: 1 0 auto;
                 width: 100%;
             }
