Add tone icons in email

--- a/common/app/views/fragments/email/stylesheets/main.scala.html
+++ b/common/app/views/fragments/email/stylesheets/main.scala.html
@@ -120,16 +120,7 @@
     }
 
     .icon {
-        margin-right: 4px;
-        padding-top: 1px;
-    }
-
-    .icon-camera {
-        margin-right: 4px;
-    }
-
-    .inline-camera {
-        fill: #fb0;
+        display: inline;
     }
 
     .text--brand {
