--- a/facia/app/views/fragments/emailFrontBody.scala.html
+++ b/facia/app/views/fragments/emailFrontBody.scala.html
@@ -12,13 +12,12 @@
 @headline(pressedContent: PressedContent) = {
     <h3 class="headline">
         @defining(FaciaCardHeader.fromTrail(pressedContent, None)) { header =>
-            @if(header.isGallery) { @icon("camera") }
-            @if(header.isGallery) { @fragments.inlineSvg("camera", "icon") }
-
             @kicker(header, Seq())
             @if(header.kicker.isDefined) {
                 <span class="kicker-separator">/</span>
             }
+
+            @if(header.isGallery) { @icon("gallery") }
         }
         @pressedContent.header.headline
     </h3>
