--- a/common/app/views/fragments/amp/stylesheets/hosted.scala.html
+++ b/common/app/views/fragments/amp/stylesheets/hosted.scala.html
@@ -717,3 +717,109 @@ figcaption {
     border: 0;
     padding: 0;
 }
+
+.main-body {
+    min-height: 100%
+}
+
+.hosted-page.hosted-gallery-page {
+    position: absolute;
+    top: 48px;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background: #333333;
+    display: flex;
+}
+
+.hosted__header.hosted-gallery-page {
+    position: absolute;
+    left: 0;
+}
+
+
+.hosted-gallery-page .hosted__headerwrap {
+    width: 100%;
+}
+
+.hosted-gallery-page amp-carousel {
+    flex: 1;
+}
+
+.hosted-gallery-page .hosted-gallery__caption {
+    position: absolute;
+    z-index: 1;
+    color: #ffffff;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    background: linear-gradient(to top, rgba(51,51,51,0.9) 0%, rgba(51,51,51,0.7) 70%, transparent 100%);
+    display: flex;
+    justify-content: flex-end;
+    align-items: flex-end;
+}
+
+.hosted-gallery__caption-text a {
+    color: #ffffff;
+    position: relative;
+    cursor: pointer;
+    text-decoration: none;
+}
+
+.hosted-gallery__caption-text a::after {
+    content: "";
+    height: 1px;
+    width: 100%;
+    background-color: #ffffff;
+    opacity: .5;
+    bottom: 1px;
+    left: 0;
+    position: absolute;
+}
+
+.hosted-gallery__info-button {
+    margin: 0 10px 5px 5px;
+    border: 1px solid #ffffff;
+    border-radius: 50%;
+    padding: 9px;
+    cursor: pointer;
+    order: 1;
+    height: 16px;
+}
+
+.hosted-gallery__info-button .icon-i {
+    font-weight: bold;
+    display: block;
+    height: 15px;
+    width: 15px;
+    line-height: 16px;
+    text-align: center;
+}
+
+.hosted-gallery__info-button .inline-cross {
+    display: none;
+    width: 15px;
+    height: 15px;
+}
+
+.hosted-gallery__caption-text,
+.hosted-gallery__image-title {
+    text-align: right;
+    flex: 1;
+    align-self: center;
+    padding: 5px;
+}
+
+.info-button-checkbox,
+.hosted-gallery__info-button .inline-cross,
+.hosted-gallery__caption-text,
+.info-button-checkbox:checked ~ .hosted-gallery__info-button .icon-i,
+.info-button-checkbox:checked ~ .hosted-gallery__image-title {
+    display:none
+}
+
+.info-button-checkbox:checked ~ .hosted-gallery__info-button .inline-cross,
+.info-button-checkbox:checked ~ .hosted-gallery__caption-text {
+    display: block;
+}
+
