--- a/common/app/views/fragments/amp/stylesheets/hosted.scala.html
+++ b/common/app/views/fragments/amp/stylesheets/hosted.scala.html
@@ -728,7 +728,7 @@ figcaption {
     left: 0;
     right: 0;
     bottom: 0;
-    background: #333333;
+    background: #3e3e3e;
     display: flex;
 }
 
@@ -745,6 +745,49 @@ figcaption {
 .hosted-gallery-page amp-carousel {
     flex: 1;
 }
+
+.hosted-gallery__meta {
+    color: white;
+    padding: 0 20px;
+    position: absolute;
+    z-index: 1;
+    left: 0;
+    right: 0;
+    bottom: 0;
+}
+
+.hosted-gallery__meta-text {
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    padding: 12px 20px 50px;
+    background: linear-gradient(to top, rgba(51,51,51,0.9) 0%, rgba(51,51,51,0.7) 70%, transparent 100%);
+}
+
+@@media (orientation: portrait) {
+    .hosted-gallery__meta {
+        top: 50%;
+        padding-top: 60%;
+        transform: translate(0, -50%);
+    }
+
+    .hosted-gallery__meta-text {
+        padding-bottom: 12px
+    }
+}
+
+.hosted-gallery__heading {
+    margin-bottom: 5px;
+    font-size: 26px;
+    line-height: 28px;
+}
+
+.hosted-gallery__sub-heading {
+    margin: 0;
+    font-size: 16px;
+    line-height: 18px;
+}
+
 
 .hosted-gallery-page .hosted-gallery__caption {
     position: absolute;
