fixing how dateline is on articles without twitter icon

--- a/static/src/stylesheets/layout/_ab-new-header-test-variant.scss
+++ b/static/src/stylesheets/layout/_ab-new-header-test-variant.scss
@@ -1014,7 +1014,7 @@ $caption-button-size: 32px;
             flex-wrap: wrap;
             border-bottom: 0;
 
-            .meta__extras {
+            .meta__extras, .content__dateline {
                 flex: 1 0 auto;
                 width: 100%;
             }
