--- a/static/src/stylesheets/module/content/_media.global.scss
+++ b/static/src/stylesheets/module/content/_media.global.scss
@@ -34,6 +34,7 @@
             &:focus {
                 background-color: transparent;
                 border-color: $neutral-6;
+                background-color: red;
             }
         }
 
