--- a/commercial/app/views/hosted/guardianAmpHostedGallery.scala.html
+++ b/commercial/app/views/hosted/guardianAmpHostedGallery.scala.html
@@ -1,4 +1,8 @@
 @import common.commercial.hosted.HostedGalleryPage
+@import model.ImageMedia
+@import model.ImageAsset
+@import com.gu.contentapi.client.model.v1.Asset
+@import com.gu.contentapi.client.model.v1.AssetType
 @(page: HostedGalleryPage)(implicit request: RequestHeader)
 @import views.html.hosted._
 @import conf.Configuration
@@ -49,34 +53,10 @@
                 layout="responsive"
                 type="slides">
                     @for(i <- page.images.indices) {
-                        <amp-img src="@page.images(i).url"
-                        layout="responsive"
-                        width="@page.images(i).width.getOrElse(5)"
-                        height="@page.images(i).height.getOrElse(3)">
-                            @if(i == 0) {
-                                <div class="hosted-gallery__meta">
-                                    <div class="hosted-gallery__meta-text">
-                                        <h1 class="hosted-gallery__heading">@{page.title}</h1>
-                                        <h3 class="hosted-gallery__sub-heading">@{page.standfirst}</h3>
-                                    </div>
-                                </div>
-                            }
-                            <div class="hosted-gallery__caption">
-                                <input type="checkbox" value="" id="info-button-@i" class="info-button-checkbox">
-                                <label for="info-button-@i" class="hosted-gallery__info-button">
-                                    <span class="icon-i">i</span>
-                                    @fragments.inlineSvg("cross", "icon", List("inline-cross inline-icon "))
-                                </label>
-                                <div class="hosted-gallery__image-title">
-                                @page.images(i).title
-                                </div>
-                                <div class="hosted-gallery__caption-text">
-                                    @Html(page.images(i).caption)
-                                    @if(page.images(i).caption.nonEmpty && page.images(i).credit.nonEmpty) {<br/>}
-                                    @page.images(i).credit
-                                </div>
-                            </div>
-                        </amp-img>
+                        @guardianAmpHostedGalleryImage(
+                            ImageMedia.make(Seq(ImageAsset.make(Asset(AssetType.Image, Some("image/jpeg"), Some(page.images(i).url)), 0))),
+                            page.images(i), i, page)
+                        )
                     }
                 </amp-carousel>
 
