--- a/common/app/views/fragments/amp/stylesheets/hosted.scala.html
+++ b/common/app/views/fragments/amp/stylesheets/hosted.scala.html
@@ -783,6 +783,7 @@ figcaption {
     position: absolute;
     bottom: 0;
     left: 0;
+    right: 0;
     padding: 12px 20px 50px;
     background: linear-gradient(to top, rgba(51,51,51,0.9) 0%, rgba(51,51,51,0.7) 70%, transparent 100%);
 }
