Enable tones for simple email sign-up forms

--- a/common/app/views/fragments/email/signup/emailSignUp.scala.html
+++ b/common/app/views/fragments/email/signup/emailSignUp.scala.html
@@ -14,6 +14,7 @@
     theFiver -> "feature",
     mediaBriefing -> "media",
     theLongRead -> "feature",
+    weekendReading -> "feature",
     theBreakdown -> "feature",
     theSpin -> "feature",
     closeUp -> "review",
@@ -26,7 +27,7 @@
 @inputId = @{ componentClass + "-email-sub-input" }
 
 @wrapperClass = @{ "email-sub js-email-sub" + " email-sub--" + componentClass + " js-email-sub--" + componentClass }
-@wrapperToneClass = @{ if (componentClass == "article") "email-sub--tone-" + listIdTones.getOrElse(listId, "news") }
+@wrapperToneClass = @{ if (componentClass == "article" || componentClass == "plaintone") "email-sub--tone-" + listIdTones.getOrElse(listId, "news") }
 @formClass = @{ "email-sub__form js-email-sub__form" + " email-sub__form--" + componentClass }
 
 <div class="@wrapperClass @wrapperToneClass">
