--- a/static/src/stylesheets/module/email/_form.scss
+++ b/static/src/stylesheets/module/email/_form.scss
@@ -268,7 +268,8 @@
 
 .email-sub__form--article,
 .email-sub__form--plain,
-.email-sub__form--plaindark
+.email-sub__form--plaindark,
+.email-sub__form--plaintone
 {
     .label__icon {
         display: inline-block;
@@ -321,6 +322,17 @@
 
     .email-sub__message__headline {
         color: #ffffff;
+    }
+}
+
+// PLAIN-TONE MODS
+.email-sub__form--plaintone {
+    padding: 0;
+
+    .email-sub__submit-input {
+        background-color: $neutral-4;
+        border-color: $neutral-4;
+        color: $neutral-1;
     }
 }
 
