--- a/static/src/stylesheets/module/email/_iframe.scss
+++ b/static/src/stylesheets/module/email/_iframe.scss
@@ -52,7 +52,8 @@ body {
     .email-sub__form--footer,
     .email-sub__form--article,
     .email-sub__form--plain,
-    .email-sub__form--plaindark {
+    .email-sub__form--plaindark,
+    .email-sub__form--plaintone {
         // Rounded inline input
         .email-sub__text-input {
             border-right: 0;
@@ -87,7 +88,8 @@ body {
 
     .email-sub__form--footer,
     .email-sub__form--plain,
-    .email-sub__form--plaindark {
+    .email-sub__form--plaindark,
+    .email-sub__form--plaintone {
         .email-sub__submit-input {
             padding-left: $gs-gutter / 2;
         }
@@ -98,7 +100,8 @@ body {
 @include mq(183px, 183px) {
     .email-sub__form--footer,
     .email-sub__form--plain,
-    .email-sub__form--plaindark {
+    .email-sub__form--plaindark,
+    .email-sub__form--plaintone {
         padding-right: $gs-gutter / 2;
 
         .email-sub__text-input {
@@ -145,8 +148,8 @@ body {
 * IFRAME PLAIN MODS
 */
 .email-sub--plain,
-.email-sub--plaindark
-{
+.email-sub--plaindark,
+.email-sub--plaintone {
     .email-sub__header,
     .email-sub__label,
     .email-sub__small {
