--- a/common/app/views/fragments/amp/stylesheets/hosted.scala.html
+++ b/common/app/views/fragments/amp/stylesheets/hosted.scala.html
@@ -1,5 +1,9 @@
 @(mainPicture: String, ctaImage: Option[String], brandColour: String)
 
+.hosted-page {
+    font-family: Helvetica, Arial sans-serif;
+}
+
 .hosted-tone {
     color: @brandColour;
 }
@@ -495,6 +499,7 @@
 }
 
 .hosted__header {
+    font-family: Helvetica, Arial sans-serif;
     width: 100%;
     height: 48px;
     background-color: #333333;
