Add logic to make int label become international for analytics

--- a/common/app/views/fragments/analytics/google.scala.html
+++ b/common/app/views/fragments/analytics/google.scala.html
@@ -24,7 +24,8 @@
     }
 
     function getAnalyticsEdition() {
-        return (guardian.config.page.edition || '').toLowerCase();
+        var edition = (guardian.config.page.edition || '').toLowerCase()
+        return edition === 'int' ? 'international' : edition;
     }
 
     function getAnalyticsTitle() {
