--- a/common/app/views/fragments/amp/stylesheets/hosted.scala.html
+++ b/common/app/views/fragments/amp/stylesheets/hosted.scala.html
@@ -746,8 +746,12 @@ figcaption {
     padding: 0;
 }
 
-.main-body {
-    min-height: 100%
+.hosted-gallery-page__main-body {
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
 }
 
 .hosted-page.hosted-gallery-page {
