--- a/static/src/stylesheets/module/email/_form.scss
+++ b/static/src/stylesheets/module/email/_form.scss
@@ -374,7 +374,7 @@
 }
 
 // TONE SPECIFIC MODS
-@each $tone-class, $tone-colour-accent, $tone-colour-headline in $tones {
+@each $tone-class, $tone-colour-accent, $tone-colour-headline, $tone-colour-border in $tones {
 
 
     .email-sub--tone-#{$tone-class} {
@@ -408,6 +408,17 @@
 
         .email-sub__small {
             color: $tone-colour-headline;
+        }
+    }
+
+    .email-sub--tone-#{$tone-class}.email-sub--plaintone {
+
+        .email-sub__text-input {
+            border-color: $tone-colour-border;
+        }
+
+        .email-sub__submit-input {
+            border-color: $tone-colour-border;
         }
     }
 }
