--- a/common/app/views/fragments/atoms/youtube.scala.html
+++ b/common/app/views/fragments/atoms/youtube.scala.html
@@ -10,10 +10,19 @@
     ))">
 
         @defining(if(!host.isEmpty) "&origin=" + host else "") { origin =>
-            <iframe id="youtube-@media.assets.head.id" width="100%" height="100%"
+            <iframe class="atom--media--youtube--iframe" id="youtube-@media.assets.head.id" width="100%" height="100%"
             src="https://www.youtube.com/embed/@media.assets.head.id?modestbranding=1&enablejsapi=1&rel=0&showinfo=0@origin" frameborder="0"
             allowfullscreen="">
             </iframe>
+
+            <div class="atom--media--youtube--overlay">
+                @media.posterUrl.map { image =>
+                    <div class="atom--media--youtube--placeholder" style="background-image: url(@image)"></div>
+                }
+                <div class="atom--media--youtube--controls">
+                    <div class="atom--media--youtube--play-button"></div>
+                </div>
+            </div>
     </div>
 
 
