--- a/common/app/views/fragments/amp/stylesheets/hosted.scala.html
+++ b/common/app/views/fragments/amp/stylesheets/hosted.scala.html
@@ -756,6 +756,7 @@ figcaption {
 
 .hosted-gallery-page__main-body {
     position: absolute;
+    max-width: 800px;
     top: 0;
     bottom: 0;
     left: 0;
@@ -850,7 +851,7 @@ figcaption {
     text-decoration: none;
 }
 
-.hosted-gallery__caption-text a::after {
+.hosted-gallery__caption-text a:not(.social__action)::after {
     content: "";
     height: 1px;
     width: 100%;
@@ -892,6 +893,15 @@ figcaption {
     flex: 1;
     align-self: center;
     padding: 5px;
+}
+
+.hosted-gallery__caption-text {
+    padding-top: 20px;
+    background: linear-gradient(to top, rgba(51,51,51,0.5) 0%, rgba(51,51,51,0.5) 70%, transparent 100%)
+}
+
+.hosted-gallery__caption-text .social {
+    text-align: left;
 }
 
 .info-button-checkbox,
