Type and color changes based on feedback

--- a/static/src/stylesheets/layout/_ab-new-header-test-variant.scss
+++ b/static/src/stylesheets/layout/_ab-new-header-test-variant.scss
@@ -759,7 +759,7 @@ $navigation-horizontal-padding: $gs-gutter * 2 + $gs-gutter/2;
 
 .tertiary-navigation {
     margin: 0;
-    background-color: $neutral-2;
+    background-color: #747a81;
     padding-left: $gs-gutter/2;
     padding-right: $gs-gutter/2;
     list-style: none;
@@ -779,12 +779,8 @@ $navigation-horizontal-padding: $gs-gutter * 2 + $gs-gutter/2;
         padding-bottom: $gs-baseline/3;
         flex-wrap: wrap;
 
-        @include mq($until: $mobile-medium) {
-            max-height: 40px;
-        }
-
-        @include mq($from: $mobile-medium) {
-            max-height: $gs-baseline*4;
+        @include mq($from: mobile, $until: mobileLandscape) {
+            max-height: 15vw;
         }
 
         @include mq($from: mobileLandscape) {
@@ -823,22 +819,23 @@ $navigation-horizontal-padding: $gs-gutter * 2 + $gs-gutter/2;
     color: $neutral-4;
     display: block;
 
-    @include mq($from: mobile, $until: $mobile-medium) {
-        font-size: 14px;
+    .tertiary-navigation__item:first-of-type & {
+        color: $news-support-1;
     }
 
-    @include mq($mobile-medium) {
+    @include mq($from: mobile, $until: mobileLandscape) {
         font-size: 16px;
+        font-size: 5.1vw;
     }
 
     @include mq(mobileLandscape) {
-        font-size: 18px;
+        font-size: 20px;
     }
 
     &:after {
         pointer-events: none;
         content: '/';
-        color: #8a8a8a;
+        color: rgba(255, 255, 255, .3);
     }
 
     // Scrolly variant, Single line limited variant
@@ -949,7 +946,7 @@ $caption-button-size: 32px;
             width: $caption-button-size;
             height: $caption-button-size;
             z-index: 1;
-            background-color: transparent;
+            background-color: rgba($neutral-1, .2);
             border-radius: 50%;
         }
         .reveal-caption--img {
@@ -963,7 +960,6 @@ $caption-button-size: 32px;
             bottom: 0;
             left: 0;
             margin: auto;
-            filter: drop-shadow(0 0 $gs-baseline/2 rgba(0, 0, 0, .4));
         }
 
         .inline-camera .reveal-caption-icon__svg {
@@ -1014,7 +1010,8 @@ $caption-button-size: 32px;
             flex-wrap: wrap;
             border-bottom: 0;
 
-            .meta__extras {
+            .meta__extras,
+            .content__dateline {
                 flex: 1 0 auto;
                 width: 100%;
             }
@@ -1040,7 +1037,7 @@ $caption-button-size: 32px;
             left: 50%;
             bottom: 0;
             margin-left: -$gs-baseline/2;
-            border-bottom: $gs-baseline/2 solid $neutral-2;
+            border-bottom: $gs-baseline/2 solid #747a81;
             border-left: $gs-baseline/2 solid transparent;
             border-right: $gs-baseline/2 solid transparent;
         }
