--- a/static/src/stylesheets/layout/_ab-new-header-test-variant.scss
+++ b/static/src/stylesheets/layout/_ab-new-header-test-variant.scss
@@ -717,6 +717,7 @@ $navigation-horizontal-padding: $gs-gutter * 2 + $gs-gutter/2;
 
 .tertiary-container {
     overflow: hidden;
+
     // Scrolly variant
     &.tertiary__variant-three {
         position: relative;
@@ -724,8 +725,12 @@ $navigation-horizontal-padding: $gs-gutter * 2 + $gs-gutter/2;
         height: $gs-baseline*2.5;
         overflow: hidden;
 
-        @include mq($mobile-medium) {
-            height: $gs-baseline * 3;
+        @include mq($from: mobile, $until: mobileLandscape) {
+            height: 9.8vw;
+        }
+
+        @include mq($from: mobileLandscape) {
+            height: $gs-baseline*3.3;
         }
 
         // Crazy radial hidey fade
@@ -755,6 +760,12 @@ $navigation-horizontal-padding: $gs-gutter * 2 + $gs-gutter/2;
             }
         }
     }
+
+    // Single line limited variant, stacked variant
+    &.tertiary__variant-four,
+    &.tertiary__variant-five {
+        border-bottom: $gs-baseline/2 solid #747a81;
+    }
 }
 
 .tertiary-navigation {
@@ -769,22 +780,22 @@ $navigation-horizontal-padding: $gs-gutter * 2 + $gs-gutter/2;
     // Scrolly variant
     .tertiary__variant-three & {
         overflow-x: scroll;
-        padding-top: 0;
         padding-bottom: $gs-baseline*3;
     }
 
     // Stacked variant
     .tertiary__variant-four & {
-        padding-top: $gs-baseline/3;
-        padding-bottom: $gs-baseline/3;
+        padding-top: $gs-baseline/2;
+        max-height: $gs-baseline*3.4;
         flex-wrap: wrap;
 
         @include mq($from: mobile, $until: mobileLandscape) {
-            max-height: 15vw;
+            max-height: $gs-baseline*4;
+            max-height: 14.8vw;
         }
 
         @include mq($from: mobileLandscape) {
-            max-height: $gs-baseline*4.5;
+            max-height: $gs-baseline*5.5;
         }
     }
 
@@ -795,19 +806,19 @@ $navigation-horizontal-padding: $gs-gutter * 2 + $gs-gutter/2;
 
     // Single line limited variant
     .tertiary__variant-five & {
-        padding-top: 0;
-        padding-bottom: 0;
-        height: $gs-baseline * 2.5;
+        height: $gs-baseline * 2;
         flex-wrap: wrap;
         padding-right: $gutter-small + $veggie-burger-small;
         overflow: hidden;
 
-        @include mq($mobile-medium) {
-            height: $gs-baseline * 3;
+        @include mq($from: mobile, $until: mobileLandscape) {
+            height: $gs-baseline * 2.2;
+            height:  8vw;
             padding-right: $gutter-medium + $veggie-burger-small;
         }
 
         @include mq(mobileLandscape) {
+            height: $gs-baseline * 2.8;
             padding-right: $gutter-large + $veggie-burger-medium;
         }
     }
@@ -829,7 +840,7 @@ $navigation-horizontal-padding: $gs-gutter * 2 + $gs-gutter/2;
     }
 
     @include mq(mobileLandscape) {
-        font-size: 20px;
+        font-size: 22px;
     }
 
     &:after {
@@ -841,11 +852,15 @@ $navigation-horizontal-padding: $gs-gutter * 2 + $gs-gutter/2;
     // Scrolly variant, Single line limited variant
     .tertiary__variant-three &,
     .tertiary__variant-five & {
-        line-height: $gs-baseline * 2.5;
+        line-height: 2.2em;
         padding: 0 .4em;
 
-        @include mq($mobile-medium) {
-            line-height: $gs-baseline * 3;
+        @include mq($from: mobile, $until: mobileLandscape) {
+            line-height: 1.9em;
+        }
+
+        @include mq($from: mobileLandscape) {
+            line-height: 1.8em;
         }
 
         &:after {
